--- a/addons/uom/i18n/de.po
+++ b/addons/uom/i18n/de.po
@@ -281,7 +281,7 @@ msgstr "Einheiten Kategorie"
 #. module: uom
 #: model:uom.uom,name:uom.product_uom_unit
 msgid "Unit(s)"
-msgstr "Einheit(en)"
+msgstr "Stück"
 
 #. module: uom
 #: selection:uom.category,measure_type:0
